WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
132930
[Mac] Search fields should not use centered look
https://bugs.webkit.org/show_bug.cgi?id=132930
Summary
[Mac] Search fields should not use centered look
Dean Jackson
Reported
2014-05-14 16:26:24 PDT
[Mac] Search fields should not use centered look
Attachments
Patch
(1.77 KB, patch)
2014-05-14 16:31 PDT
,
Dean Jackson
bdakin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dean Jackson
Comment 1
2014-05-14 16:31:41 PDT
Created
attachment 231472
[details]
Patch
Dean Jackson
Comment 2
2014-05-14 16:37:23 PDT
Committed
r168870
: <
http://trac.webkit.org/changeset/168870
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug