[Mac] Search fields should not use centered look https://bugs.webkit.org/show_bug.cgi?id=132930 <rdar://problem/16825842>

Reviewed by Beth Dakin.

We need to explicitly set the centeredLook property
to NO on modern releases of Mac.

* rendering/RenderThemeMac.mm: Declare a new private property and set it to NO.
(WebCore::RenderThemeMac::search):

Canonical link: https://commits.webkit.org/150987@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@168870 268f45cc-cd09-0410-ab3c-d52691b4dbfc